Add docs + Fix lint
